fix(frontend): use percent instead of `vw` for body width
Because Chromium's scrollbar doesn't overlay over content.

--- a/packages/frontend/src/app.css
+++ b/packages/frontend/src/app.css
@@ -132,7 +132,7 @@
 /* Basic */
 html,
 body {
-    width: 100vw;
+    width: 100%;
     min-height: 100dvh;
 }
 
